digistore-frontend-ms-k8-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: digistore-frontend-ms
  name: digistore-frontend-ms
spec:
  ports:
  - protocol: TCP
    name: "80"
    port: 80
    targetPort: 80
  selector:
    app: digistore-frontend-ms
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: digistore-frontend-ms
  name: digistore-frontend-ms
spec:
  selector:
    matchLabels:
      app: digistore-frontend-ms
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: digistore-frontend-ms
    spec:
      containers:
      - name: digistore-frontend-ms
        image: localhost:5000/digistore/digistore-frontend-ms:latest
        command: ["ng"]
        args: ["serve", "--port", "80", "--host", "0.0.0.0", "--disable-host-check"]

        imagePullPolicy: "Always"
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: "1"
            memory: "1073741824"
          requests:
            cpu: 250m
            memory: "536870912"
      restartPolicy: Always
status: {}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: digistore-product-ms-ingress
  annotations:
    #kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: www.digistore.com
    http:
      paths:
      - path: /product
        pathType: Prefix
        backend:
          service:
            name: digistore-product-ms
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: digistore-frontend-ms
            port:
              number: 80
  - http:
      paths:
      - path: /product
        pathType: Prefix
        backend:
          service:
            name: digistore-product-ms
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: digistore-frontend-ms
            port:
              number: 80
